add gulp-iff and gulp-csso along with edits to the gulpfile.js file to get the html task to run in the build task

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Lake Tahoe</title>
+    <!-- build:css css/app.min.css -->
     <link rel="stylesheet" href="css/application.css">
+    <!-- endbuild -->
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
@@ -61,8 +63,10 @@
 			<p>All rights reserved to the state of <a href="#">California</a>.</p>
 			<a href="#top">Back to top &raquo;</a>
 		</footer>
+    <!-- build:js js/app.js -->
     <script src="js/jquery.js"></script>
     <script src="js/sticky/jquery.sticky.js"></script>
     <script src="js/main.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
